--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,3 @@
-python-telegram-bot==20.7
-python-dotenv==1.0.0
-Pillow==10.2.0  # تغيير الإصدار إلى 10.2.0
+python-telegram-bot==13.15
+python-dotenv==0.19.0
+Pillow==9.5.0
